css/norch-bootstrap.css
html {overflow: -moz-scrollbars-vertical; overflow: scroll;}
body {background:#ccc; font-size:1.8em;}
h2 {color:#000;}
h3 a {color:#000;}

blockquote {border-left: 5px solid #ccc;}

b.panel-title {margin-left:-27px; color:#666;}
#tab-content-id {margin-top: 30px}


/*dirty hack to disable TOC links in HTMLed README.md*/
.ng-binding li a {pointer-events: none;cursor: default;}

.navbar {margin-bottom:0px;border-radius:0px 0px 0px 10px;}
.navbar .form-control {border:none;}
.navbar-default {background:#bbb;border:none;box-shadow:none;}
.navbar-brand {padding:8px 0px 8px 8px}
.navbar-brand img {border-radius:0 0 0 4px;}
.navbar-form {margin-left:-15px;}
#searchbox {border-radius:0 4px 4px 0;}
.mesearch {width:46px; height:46px;}

.navbar-default .navbar-collapse, .navbar-default .navbar-form {
	border:none;
}

.row {margin-right:0px;margin-left:0px;}
.facets, .results {margin-left:54px;box-sizing:border-box;}
.facets .count {color:#99c;}
.facets .btn-group-vertical > .btn, .btn-group > .btn { float:none;}
.facets .btn-group, .btn-group-vertical {margin-bottom:7px;}

.panel {border:none;box-shadow:none;border-radius:0px;}
.type {font-size:1.9em;position:absolute;display:block;z-index:10;left:-50px;top:0px;width:50px;height:50px;padding:0px;color:#aaa;}

.panel.row img {max-width: 100%;}

.col-sm-5 {padding:15px;}

.flickr img {width:100%;}
.gravatar img {width:50%;}

@media (min-width: 300px) {
  #searchbox{width:180px}
}
@media (min-width: 400px) {
  #searchbox{width:250px}
}

@media (min-width: 500px) {
  #searchbox{width:350px}
}

@media (min-width: 768px) {
  #searchbox{width:380px}
}
@media (min-width: 1024px) {
  #searchbox{width:600px}
}

@media (max-width: 768px) {
	.navbar-form {
		box-shadow:none;
		padding:0;
	}
}

.red{color:red}

#viewdiv{padding-top: 5px}

.sc-em{background:#ffffbb;}

